# FullAutomaticCapitalism

./: .gitignore  404.html  Gemfile  README.md  go.mod  index.html
Python/: pyproject.toml
Python/fulautocapit/: __init__.py
Python/tests/: test_fulautocapit.py
Ruby/: Gemfile  main.rb
assets/js/: 18c41134.b6887f9d.js  47424651.f454fd4a.js  7661071f.16edc72f.js  9a4f1349.1f6ed60a.js  ccaf3c48.e19dd46d.js  d9f32620.2043cca3.js  dff1c289.0f91bc2d.js  e44a2883.288518b7.js  main.ad3a10d9.js  runtime~main.616f3cd8.js
blog/: index.html
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
cmd/app/: main.go
docs/: docusaurus.config.js  package-lock.json
docs/category/tutorial---basics/: index.html
docs/category/tutorial---extras/: index.html
docs/intro/: index.html
docs/tutorial-basics/congratulations/: index.html
docs/tutorial-basics/create-a-blog-post/: index.html
docs/tutorial-basics/create-a-document/: index.html
docs/tutorial-basics/create-a-page/: index.html
docs/tutorial-basics/deploy-your-site/: index.html
docs/tutorial-basics/markdown-features/: index.html
docs/tutorial-extras/manage-docs-versions/: index.html
internal/action/: main.go
internal/none/depth/: main.go
internal/pull/: pull.go
internal/time/: time.go
internal/trade/: order.go
markdown-page/: index.html
(+8 files in other folders)
