[tool.poetry]
name = "FulAutoCapit"
version = "0.1.0"
description = "Full-Automatic Capitalism."
authors = ["Yakkhini"]
license = "MPL v2.0"

[tool.poetry.dependencies]
python = "^3.10"
binance-connector = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
